# joshua

./: Cargo.toml  README.md
crates/joshua-llamacpp-npu/: Cargo.toml  build.rs
crates/joshua-llamacpp-npu/src/: lib.rs
crates/joshua-mock-npu/: Cargo.toml
crates/joshua-mock-npu/src/: lib.rs
src/: embedding.rs  engine.rs  error.rs  lib.rs  main.rs  model.rs  quantized_deepseek2.rs  server.rs  template.rs  tools.rs  types.rs  whisper.rs
src/npu/: mod.rs  proto.rs  shim.rs  vendor.rs
tests/: deepseek2_tests.rs  integration_tests.rs  llamacpp_adapter_tests.rs  npu_tests.rs  server_tests.rs  whisper_tests.rs
tests/common/: mod.rs
