[workspace]
members = [".", "crates/joshua-mock-npu", "crates/joshua-llamacpp-npu"]
# The llama.cpp adapter compiles C++ (llama.cpp itself) and is therefore not
# part of the default build: `cargo build`/`cargo test` stay pure Rust.
default-members = [".", "crates/joshua-mock-npu"]

[package]
name = "joshua"
version = "0.1.0"
edition = "2021"
description = "An mmap-based LLM inference engine for the Rust ecosystem — a Rust clone of Cactus"
license = "MIT"
repository = "https://github.com/rexlunae/joshua"
keywords = ["llm", "inference", "ai", "openai", "gguf"]
categories = ["science", "api-bindings"]

[[bin]]
name = "joshua"
path = "src/main.rs"

[lib]
name = "joshua"
path = "src/lib.rs"

[features]
default = []
# GPU acceleration. CPU inference stays pure Rust; enabling one of these
# pulls in the corresponding candle backend (CUDA needs the NVIDIA toolkit
# at build time, Metal is macOS-only).
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
# HTTPS termination via rustls. Opt-in because the ring crypto provider
# compiles C/assembly, which would break the default build's
# "only a Rust toolchain required" guarantee.
tls = ["dep:axum-server", "dep:rustls"]

[dependencies]
# Pure Rust ML inference (no C/C++ dependencies required for CPU)
candle-core = "0.11"
candle-transformers = "0.11"
candle-nn = "0.11"

# Tokenization (pure Rust BPE/WordPiece — loads tokenizer.json from HuggingFace)
# fancy-regex is the pure Rust regex backend (replaces the default Oniguruma C backend).
# esaxx_fast is omitted to avoid the C++ suffix-array helper.
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }

# Memory-mapped model loading (pure Rust wrapper over mmap(2))
memmap2 = "0.9"

# Runtime loading of NPU vendor plugins (thin safe wrapper over dlopen)
libloading = "0.8"

# WAV decoding for Whisper speech-to-text (pure Rust)
hound = "3.5"

# Media payload encoding on the NPU shim control pipe (pure Rust)
base64 = "0.22"

# Chat-template rendering (pure Rust Jinja2 engine).
# pycompat adds Python string/dict methods (.strip(), .title(), …) that
# HuggingFace chat templates rely on.
minijinja = { version = "2", features = ["json"] }
minijinja-contrib = { version = "2", features = ["pycompat"] }

# Sampling
rand = "0.8"

# API-key comparison (pure Rust SHA-256): keys are hashed before comparing
# so the check is fixed-length and leaks nothing through timing.
sha2 = "0.10"

# HTTP server & utilities
axum = { version = "0.8", features = ["json", "macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
tokio-stream = "0.1"

# HTTPS support (the optional `tls` feature). axum-server is built without
# a crypto provider so we can pick ring (needs only a C compiler) over the
# default aws-lc-rs (needs CMake).
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"], optional = true }

[dev-dependencies]
# Used by integration tests to synthesise tiny GGUF model files and
# whisper checkpoints, and to generate WAV fixtures.
candle-core = "0.11"
candle-nn = "0.11"
candle-transformers = "0.11"
hound = "3.5"
# Used by the server tests to drive the router in-process and decode the
# embedded self-signed test certificate (all pure Rust).
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.5", features = ["util"] }
base64 = "0.22"
