[package]
name = "joshua-llamacpp-npu"
version = "0.1.0"
edition = "2021"
description = "llama.cpp compatibility plugin for Joshua's joshua_npu_* ABI — brings every ggml backend (Hexagon NPU, CANN, CUDA, Vulkan, OpenCL, …) to Joshua"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Bindings that vendor and build llama.cpp (requires a C++ toolchain + CMake;
# this crate is deliberately excluded from the workspace default build so the
# pure-Rust core never compiles C++).
llama-cpp-2 = { version = "0.1.151", features = ["mtmd"] }

[features]
default = []
# Forwarded llama.cpp GPU backends. NPU backends (Hexagon, CANN) are enabled
# by building llama.cpp with the vendor SDK — see the crate docs.
cuda = ["llama-cpp-2/cuda"]
vulkan = ["llama-cpp-2/vulkan"]
metal = ["llama-cpp-2/metal"]
